fix: Make file upload more visible

--- a/src/assets/css/document-uploader.css
+++ b/src/assets/css/document-uploader.css
@@ -14,6 +14,10 @@
   @apply mb-3 w-10 h-10 text-gray-900;
 }
 
+.document-uploader-icon-blue {
+  @apply mb-3 w-10 h-10 text-blue-500;
+}
+
 .document-uploader-separator {
   @apply my-5 mx-auto w-36 h-px bg-gray-200 rounded border-0;
 }
